# fossil-mirror

./: .dockerignore  .editorconfig  .project  BUILD.txt  CMakeLists.txt  COPYRIGHT-BSD2.txt  COPYRIGHT-GPL2.txt  Dockerfile  Dockerfile.in  GNUmakefile.in  Makefile  Makefile.Cygwin.in  Makefile.classic  Makefile.in  Makefile.osx-jaguar  Makefile.w32  README.md  auto.def  autoconfig.h.in  ci_cvs.txt  ci_fossil.txt  configure  configure.ac  cvs2fossil.txt  fossil.1  fossil.nsi  ideas.txt  kktodo.wiki  make.sh  manifest  manifest.tags  manifest.uuid  rse-notes.txt  todo-ak.txt  todo.txt  wiki_and_ticket_ideas.txt  win32.txt
.fossil-settings/: binary-glob  clean-glob  crlf-glob  crnl-glob  encoding-glob  ignore-glob
ajax/: README  index.html  wiki-editor.html
ajax/cgi-bin/: fossil-json.cgi.example
ajax/i-test/: rhino-shell.js  rhino-test.js
ajax/js/: fossil-ajaj.js  whajaj.js
art/: CollRev1.dia  CollRev2.dia  CollRev3.dia  CollRev4.dia  branching.odp  concept1.dia  concept2.dia  delta1.dia  delta2.dia  delta3.dia  delta4.dia  delta5.dia  delta6.dia  encode1.tex  encode10.dia  encode2.tex  encode3.tex  encode4.tex  encode5.tex  encode6.tex  encode7.tex  encode8.tex  encode9.tex
autoconf/: ax_check_openssl.m4
autosetup/: autosetup  autosetup-find-tclsh  cc-run.tcl  cc-shared.tcl  cc.tcl  find-tclsh  jimsh0.c  local.tcl  system.tcl
compat/zlib/: Makefile  Makefile.in  configure  zconf.h
containers/: Dockerfile-nojail.patch  busybox-config  os-release  os-release.in
debian/: makedeb.sh
extsrc/: cson_amalgamation.c  cson_amalgamation.h  linenoise.c  miniz.c  pikchr-module.js  pikchr-worker.js  pikchr.c  pikchr.js  pikchr.wasm  shell.c  sqlite3.h
make/: README.wiki  clang-fragment.mk  freebsd-clang-config.mk  freebsd-fragment.mk  freebsd-gcc-config.mk  freebsdgcc-pre-config.mk  gcc-fragment.mk  linux-clang-config.mk  linux-fragment.mk  linux-gcc-config.mk  linuxclang-pre-config.mk  linuxgcc-pre-config.mk  ming32-fragment.mk  mingw32-fragment.mk  mingw32-gcc-config.mk  mingw32-pre-config.mk  opensolaris-fragment.mk  opensolarisgcc-pre-config.mk  solaris-fragment.mk  solaris-gcc-config.mk  solarisgcc-pre-config.mk
setup/: fossil.iss  fossil.nsi
skins/: README.md
skins/aht/: details.txt
skins/ardoise/: README.md  css.txt  details.txt  footer.txt  header.txt
skins/black_and_white/: css.txt  footer.txt  header.txt
skins/blitz/: README.md  css.txt  details.txt  footer.txt  header.txt  ticket.txt
skins/blitz_no_logo/: README.md  css.txt  details.txt  footer.txt  header.txt  ticket.txt
skins/bootstrap/: css.txt  details.txt  footer.txt  header.txt
skins/darkmode/: css.txt  footer.txt  header.txt
skins/default/: README.md  css.txt  details.txt  footer.txt  header.txt  js.txt  script.txt
skins/default1/: header.html  info.txt  style.css
skins/default2/: header.html  info.txt  style.css
skins/default3/: footer.html  header.html  info.txt  style.css
skins/dense/: README.md  footer.txt  header.txt
skins/eagle/: README.md  css.txt  details.txt  footer.txt  header.txt
skins/enhanced1/: details.txt  footer.txt  header.txt
skins/etienne/: README.md  css.txt  footer.txt  header.txt
skins/etienne1/: README.md  css.txt  footer.txt  header.txt
skins/khaki/: css.txt  footer.txt  header.txt
skins/original/: css.txt  details.txt  footer.txt  header.txt
skins/plain_gray/: css.txt  footer.txt  header.txt
skins/rounded1/: css.txt  details.txt  header.txt
skins/xekri/: README.md  (+4 more)
src/: Makefile  VERSION  accordion.js  add.c  admin.c  admin_sql_page.c  ajax.c  alerts.c  allrepo.c  attach.c  auxwww.c  backlink.c  backoffice.c  bag.c  bisect.c  blob.c  branch.c  browse.c  builtin.c  bundle.c  cache.c  capabilities.c  captcha.c  carray.c  cgi.c  chat.c  chat.js  check-platform.sh  checkin.c  checkout.c  ci_edit.js  clearsign.c  clone.c  cmark_amalgamation.c  cmark_amalgamation.h  codecheck1.c  color.c  comformat.c  config.h  configure.c  (+236 more)
test/: Greek-Lipsum-1.txt  Greek-Lipsum-2.txt  amend.test  basic1.test  clean.test  cmdline.test  comment.test  commit-warning.test  commonmark_tests.json  commonmark_tests.tcl  contains-selector.test  csp1.html  delta1.test  diff-test-1.wiki  diff.test  fake-editor.tcl  file1.test  fileStat.th1  fileage-test-1.wiki  glob.test  graph-test-1.wiki  graph-test-2.md  json.test  link-tester.html  link-tester.js  link-tester.json  long-double.test  longpath.test  make-bundle-data.sh  many-www.tcl  markdown-test1.md  markdown-test2.md  markdown-test3.md  merge1.test  merge2.test  merge3.test  merge4.test  merge5.test  merge5_repo.sql  merge6.test  (+50 more)
tools/: Set-ChildProject.ps1  busybox-config  chat.tcl  co-rsync.tcl  codecheck1.c  decode-email.c  email-monitor.tcl  email-sender.tcl  emcc.sh.in  encode_math.sh  exportbundle.sh  fake-smtpd.tcl  find-fossil-cgis.tcl  fossil-autocomplete.bash  fossil-autocomplete.zsh  fossil-diff-log  fossil-makeinfo  fossil-stress.tcl  fossil_chat.tcl  fossilwiki  fslsrv  import-cvs.tcl  importbundle.sh  infoscript.bash  makeheaders.c  makeheaders.html  makemake.tcl  man_page_command_list.tcl  mkbuiltin.c  mkindex.c  mkversion.c  randomize-js-names.tcl  skintxt2config.c  sqlcompattest.c  translate.c
win/: Makefile.PellesCGMake  Makefile.dmc  Makefile.mingw  Makefile.mingw.mistachkin  Makefile.mingw32cross  Makefile.mingw_static  Makefile.msc  Makefile.msc.mistachkin  build32.bat  build64.bat  buildmsvc.bat  fossil.exe.manifest  fossil.rc  icon.rc  msvc_build.bat  version.c
www/: aboutcgi.wiki  aboutdownload.wiki  adding_code.wiki  admin-v-setup.md  alerts.md  antibot.wiki  backoffice.md  backup.md  base32.html  blame.wiki  blockchain.md  branch01.graphml  branch02.graphml  branch03.graphml  branch04.graphml  branch05.graphml  branch06.graphml  branching.wiki  bugtheory.wiki  build.html  build.wiki  build_in_ide.md  cap-theorem.md  capabilities.md  cgi.wiki  changes.wiki  chat.md  checkin.wiki  checkin_names.wiki  childprojects.wiki  chroot.md  ckout-workflows.md  cmd_.wiki-template  cmd_add.wiki  cmd_all.wiki  cmd_cgi.wiki  cmd_changes.wiki  cmd_checkout.wiki  cmd_extra.wiki  cmd_ls.wiki  (+132 more)
(+164 files in other folders)
